Adapt login button description in header component

--- a/src/assets/i18n/home/de.json
+++ b/src/assets/i18n/home/de.json
@@ -5,7 +5,8 @@
     "back": "Zurück",
     "my-sessions": "Meine Sessions",
     "visited-sessions": "Besuchte Sessions",
-    "login": "Login",
+    "login": "Anmelden",
+    "login-description":  "Bei frag.jetzt anmelden",
     "my-account": "Konto",
     "my-guest-account": "Sessions",
     "id": "ID",
