--- a/src/assets/i18n/home/en.json
+++ b/src/assets/i18n/home/en.json
@@ -6,6 +6,7 @@
     "my-sessions": "My sessions",
     "visited-sessions": "Visited sessions",
     "login": "Login",
+    "login-description":  "Login to frag.jetzt",
     "my-account": "My account",
     "my-guest-account": "Sessions",
     "id": "ID",
