--- a/src/assets/i18n/home/en.json
+++ b/src/assets/i18n/home/en.json
@@ -34,7 +34,7 @@
     "please-enter": "… your professor tells you",
     "exactly-8": "A session ID has exactly 8 digits.",
     "create-session": "New session",
-    "create-session-description": "Create a new session",
+    "create-session-description": "Create new session",
     "no-empty-name": "Please enter a name.",
     "created-1": "Session '",
     "created-2": "' successfully created",
