--- a/src/assets/i18n/home/de.json
+++ b/src/assets/i18n/home/de.json
@@ -15,8 +15,10 @@
 		"really-delete-account": "Willst du dein Konto mit den zugehörigen Sessions wirklich unwiderruflich löschen?",
 		"account-deleted": "Dein Konto wurde erfolgreich gelöscht.",
 		"abort": "Abbrechen",
-		"delete": "Löschen"
-	},
+		"delete": "Löschen",
+    "buttonAccount": "Einloggen"
+
+  },
 	"login-page": {
 		"creator": "Dozent/in",
 		"participant": "Student/in",
@@ -103,6 +105,15 @@
     "style": "Stil",
     "language": "Sprache",
     "english": "Englisch",
-    "german": "Deutsch"
+    "german": "Deutsch",
+    "buttonSecurity": "Datenschutz",
+    "buttonLanguage": "Sprache",
+    "buttonPalette": "Stil",
+    "buttonDemo": "Demo",
+    "buttonInfo": "Impressum",
+    "buttonHelp": "Hilfe"
+  },
+  "room-join": {
+    "buttonInput": "Eingabe"
   }
 }
