Change Buttons into dual language, arial removed

--- a/src/assets/i18n/home/en.json
+++ b/src/assets/i18n/home/en.json
@@ -103,6 +103,16 @@
     "style": "Style",
     "language": "Language",
     "english": "English",
-    "german": "German"
+    "german": "German",
+
+    "bLanguage": "Language",
+    "bPalette": "Style",
+    "bOnDemand": "Demo",
+    "bDataprotect" : "Dataprotect",
+    "bInfo" : "Imprint"
+  },
+
+  "room-join" : {
+    "bInput": "Input"
   }
 }
