Adapt buttons of create room dialog component
Add a cancel button to the dialog and provide own i18n section
for the dialog buttons.

--- a/src/assets/i18n/home/en.json
+++ b/src/assets/i18n/home/en.json
@@ -104,5 +104,11 @@
     "language": "Language",
     "english": "English",
     "german": "German"
+  },
+  "room-create": {
+    "cancel": "Cancel",
+    "cancel-description": "Cancel",
+    "create-room": "Create Session",
+    "create-room-description": "Create new session"
   }
 }
