--- a/src/assets/i18n/home/de.json
+++ b/src/assets/i18n/home/de.json
@@ -104,5 +104,11 @@
     "language": "Sprache",
     "english": "Englisch",
     "german": "Deutsch"
+  },
+  "room-create": {
+    "cancel": "Zurück",
+    "cancel-description": "Zurück",
+    "create-room": "Session erstellen",
+    "create-room-description": "Neue Session erstellen"
   }
 }
