Adapt buttons of user register dialog component
Add a cancel button to the dialog.

--- a/src/assets/i18n/home/de.json
+++ b/src/assets/i18n/home/de.json
@@ -69,16 +69,19 @@
 		"reset-successful": "Passwort wurde zurückgesetzt. Bitte prüfe deine E-Mails."
 	},
 	"register": {
-		"email": "E-Mail",
-		"email-verify": "E-Mail bestätigen",
-		"email-invalid": "E-Mail-Adresse ungültig",
-		"email-required": "E-Mail-Adresse erforderlich",
-		"email-unmatch": "E-Mail-Adressen stimmen nicht überein",
-		"password": "Passwort",
-		"password-required": "Passwort erforderlich",
-		"password-unmatch": "Passwörter stimmen nicht überein",
-		"password-verify": "Passwort bestätigen",
-		"register": "Registrieren",
+    "cancel": "Zurück",
+    "cancel-description": "Zurück",
+    "email": "E-Mail",
+    "email-verify": "E-Mail bestätigen",
+    "email-invalid": "E-Mail-Adresse ungültig",
+    "email-required": "E-Mail-Adresse erforderlich",
+    "email-unmatch": "E-Mail-Adressen stimmen nicht überein",
+    "password": "Passwort",
+    "password-required": "Passwort erforderlich",
+    "password-unmatch": "Passwörter stimmen nicht überein",
+    "password-verify": "Passwort bestätigen",
+    "register": "Registrieren",
+    "register-description": "Benutzer registrieren",
 		"register-successful": "Erfolgreich registriert. Bitte prüfe deine E-Mails.",
 		"register-unsuccessful": "Bitte prüfe deine Eingaben.",
 		"register-request-error": "Etwas ist bei der Registierung fehlgeschlagen. Hast du dich vielleicht schon registriert?"
