Migrate delete account component to use generic dialog actions component
Also add an own i18n section for component.

--- a/src/assets/i18n/home/de.json
+++ b/src/assets/i18n/home/de.json
@@ -17,6 +17,12 @@
 		"abort": "Abbrechen",
 		"delete": "Löschen"
 	},
+  "delete-account": {
+    "cancel": "Zurück",
+    "cancel-description": "Zurück",
+    "delete": "Löschen",
+    "delete-description": "Konto löschen"
+  },
 	"login-page": {
 		"creator": "Dozent/in",
 		"participant": "Student/in",
