Migrate room edit component to use generic dialog actions component

--- a/src/assets/i18n/creator/de.json
+++ b/src/assets/i18n/creator/de.json
@@ -10,6 +10,8 @@
     "create-content": "Frage erstellen",
     "live-feedback": "Live Feedback",
     "answer-statistics": "Statistiken",
+    "cancel": "Zurück",
+    "cancel-description": "Zurück",
     "delete-room": "Session löschen",
     "sure": "Bist du sicher?",
     "reallySession": "Willst du die Session ",
