Migrate room delete component to use generic dialog actions component

--- a/src/assets/i18n/creator/de.json
+++ b/src/assets/i18n/creator/de.json
@@ -13,6 +13,7 @@
     "cancel": "Zurück",
     "cancel-description": "Zurück",
     "delete-room": "Session löschen",
+    "delete-room-description": "Session löschen",
     "sure": "Bist du sicher?",
     "reallySession": "Willst du die Session ",
     "reallyContent": "Willst du die Frage ",
