Migrate user activation component to use generic dialog actions component

--- a/src/assets/i18n/home/de.json
+++ b/src/assets/i18n/home/de.json
@@ -47,6 +47,8 @@
 		"install": "Installieren"
 	},
 	"login": {
+    "cancel": "Zurück",
+    "cancel-description": "Zurück",
     "header": "Login",
 		"email": "E-Mail",
 		"email-invalid": "E-Mail-Adresse ungültig",
