Migrate create comment component to use generic dialog actions component

--- a/src/assets/i18n/participant/de.json
+++ b/src/assets/i18n/participant/de.json
@@ -17,6 +17,8 @@
     "session-id": "ID"
   },
   "comment-page": {
+    "cancel": "Zurück",
+    "cancel-description": "Zurück",
     "enter-title": "Titel",
     "enter-comment": "Deine Frage",
     "send": "Senden",
