--- a/src/assets/i18n/home/de.json
+++ b/src/assets/i18n/home/de.json
@@ -1,21 +1,21 @@
 {
   "cookies": {
-    "accept": "Ok",
-    "accept-description": "Bestätigt die Verwendung von Cookies und führt zur Startseite zurück.",
-    "cancel": "Nein",
+    "accept": "Danke, ich hab's verstanden.",
+    "accept-description": "Bestätigt die Verwendung von Cookies und schaltet die Anwendung frei.",
+    "cancel": "Nein, lösche meine Spuren.",
     "cancel-description": "Lehnt die Verwendung von Cookies ab und verlässt die Anwendung.",
     "info-label": "Öffnet ein Dialogfenster mit der frag.jetzt Datenschutzerklärung."
   },
   "overlay": {
     "message": "Du hast die Benutzung von Cookies für diese Anwendung nicht erlaubt. Solange kannst du diese Seite nicht nutzen.",
     "cancel": "Einstellung ändern",
-    "cancel-description": "Öffnet den Dialog mit den Cookie Einstellungen"
+    "cancel-description": "Öffnet einen Dialog mit den Cookie Einstellungen."
   },
   "data-protection": {
     "cancel": "Ablehnen",
-    "cancel-description": "Lehnt die Datenschutzrichtlinien ab.",
+    "cancel-description": "Lehnt die Datenschutzerklärung ab.",
     "consent": "Akzeptieren",
-    "consent-description": "Akzeptiert die Datenschutzrichtlinien der Anwendung.",
+    "consent-description": "Akzeptiert die Datenschutzerklärung der Anwendung.",
     "title": "Datenschutz"
   },
   "delete-account": {
@@ -75,10 +75,10 @@
     "visited-sessions": "Besuchte Sitzungen"
   },
   "help": {
+    "cancel": "Schließen",
     "close": "Schließen",
     "close-label": "Schließt die Hilfe.",
-    "title": "Hilfe",
-    "cancel": "Schließen"
+    "title": "Hilfe"
   },
   "home-page": {
     "accessibility-create": "Erstellt eine neue Sitzung.",
@@ -110,27 +110,22 @@
     "activation-key-input-description": "Gib hier den Aktivierungs-Schlüssel ein den du per E-Mail zugesendet bekommen hast.",
     "cancel": "Zurück",
     "cancel-description": "Zurück",
-    "email": "Adresse als Benutzername",
+    "email": "E-Mail Adresse",
     "email-description": "Gib hier deine E-Mail Adresse ein.",
-    "email-invalid": "Adresse ungültig",
-    "email-required": "Adresse erforderlich",
+    "email-invalid": "E-Mail Adresse ungültig",
+    "email-required": "E-Mail Adresse erforderlich",
     "guest-login": "Anmelden als Gast",
     "guest-login-tooltip": "Als Gast erstellte Sitzungen werden nach dem Abmelden wieder gelöscht. Mit einem Konto erstellte Sitzungen werden nach dem letzten Besuch für 180 Tage gespeichert.",
-    "header": "Login",
+    "header": "Anmelden",
     "input-incorrect": "Bitte prüfe deine Eingaben.",
     "login": "Anmelden mit Konto",
     "login-data-incorrect": "Benutzername oder Passwort falsch",
     "login-successful": "Anmeldung erfolgreich",
+    "not-registered": "Noch kein Konto?",
     "or": "oder",
     "password": "Passwort",
     "password-description": "Gib hier dein Passwort ein.",
-    "password-required": "Passwort erforderlich"
-  },
-  "login-page": {
-    "cancel": "Zurück",
-    "cancel-description": "Zurück",
-    "login": "Anmelden mit Konto",
-    "not-registered": "Noch kein Konto?",
+    "password-required": "Passwort erforderlich",
     "password-reset": "Passwort vergessen?",
     "register": "Registrieren",
     "welcome": "Online fragen & Fragen voten"
@@ -143,16 +138,16 @@
     "email-invalid": "Adresse ungültig",
     "email-required": "Adresse erforderlich",
     "forgot-password": "Passwort vergessen?",
-    "set-new-password": "Setze ein neues Passwort mit dem Schlüssel",
     "input-incorrect": "Bitte prüfe deine Eingaben.",
+    "key": "Passwortrücksetz-Schlüssel",
+    "key-required": "Passwortrücksetz-Schlüssel erforderlich",
+    "new-password": "Neues Passwort",
+    "new-password-successful": "Dein neues Passwort wurde erfolgreich gesetzt.",
     "reset-password": "Passwort zurücksetzen",
     "reset-password-description": "Passwort zurücksetzen",
     "reset-successful": "Passwort wurde zurückgesetzt. Bitte prüfe dein Postfach.",
-    "set-new-password-button": "Setze Passwort",
-    "key": "Schlüssel",
-    "new-password": "Neues Passwort",
-    "new-password-successful": "Das neue Passwort wurde gesetzt.",
-    "key-required": "Schlüssel erforderlich"
+    "set-new-password": "Setze ein neues Passwort mit dem Schlüssel",
+    "set-new-password-button": "Setze Passwort"
   },
   "register": {
     "cancel": "Zurück",
