Add german and english login button screen reader description

--- a/src/assets/i18n/home/de.json
+++ b/src/assets/i18n/home/de.json
@@ -120,6 +120,7 @@
     "input-incorrect": "Bitte prüfe deine Eingaben.",
     "login": "Anmelden mit Konto",
     "login-data-incorrect": "Benutzername oder Passwort falsch",
+    "login-description": "Anmelden mit Konto",
     "login-successful": "Anmeldung erfolgreich",
     "not-registered": "Noch kein Konto?",
     "or": "oder",
