--- a/src/assets/i18n/home/en.json
+++ b/src/assets/i18n/home/en.json
@@ -198,7 +198,7 @@
     "room-history-headline": "Your visited sessions",
     "session-history": "Your session history contains {count}} sessions.",
     "session-history-1": "Your session history contains one session.",
-    "session-history-label": "Below you will find a list of the sessions attended."
+    "session-history-label": "Below you will find a list of your attended sessions."
   },
   "session": {
     "create-session": "Create session",
