Add missing dot

--- a/src/assets/i18n/home/de.json
+++ b/src/assets/i18n/home/de.json
@@ -33,7 +33,7 @@
     "accessibility-demo": "Öffnet ein Einführungs-Video zu frag.jetzt.",
     "accessibility-help": "Öffnet die Hilfe.",
     "accessibility-imprint": "Öffnet das Impressum.",
-    "accessibility-language": "Öffnet die Sprachauswahl",
+    "accessibility-language": "Öffnet die Sprachauswahl.",
     "accessibility-style": "Öffnet die Farbauswahl.",
     "beamer": "Für den Beamer optimiert",
     "bright": "Heller Hintergrund",
