--- a/src/assets/i18n/home/de.json
+++ b/src/assets/i18n/home/de.json
@@ -134,10 +134,10 @@
   "password-reset": {
     "cancel": "Zurück",
     "cancel-description": "Zurück",
-    "email": "Adresse",
+    "email": "E-Mail Adresse",
     "email-description": "Gib hier deine E-Mail Adresse ein um dein Passwort zurückzusetzen.",
-    "email-invalid": "Adresse ungültig",
-    "email-required": "Adresse erforderlich",
+    "email-invalid": "E-Mail Adresse ungültig",
+    "email-required": "E-Mail Adresse erforderlich",
     "forgot-password": "Passwort vergessen?",
     "input-incorrect": "Bitte prüfe deine Eingaben.",
     "key": "Passwortrücksetz-Schlüssel",
@@ -153,13 +153,13 @@
   "register": {
     "cancel": "Zurück",
     "cancel-description": "Zurück",
-    "email": "Adresse",
+    "email": "E-Mail Adresse",
     "email-description": "Gib hier deine E-Mail Adresse ein.",
     "email-description-repeat": "Gib hier bitte erneut deine E-Mail Adresse ein um sicherzustellen dass du dich nicht vertippt hast.",
-    "email-invalid": "Adresse ungültig",
-    "email-required": "Adresse erforderlich",
-    "email-unmatch": "Adressen stimmen nicht überein",
-    "email-verify": "Adresse wiederholen",
+    "email-invalid": "E-Mail Adresse ungültig",
+    "email-required": "E-Mail Adresse erforderlich",
+    "email-unmatch": "E-Mail Adressen stimmen nicht überein",
+    "email-verify": "E-Mail Adresse wiederholen",
     "forgot-password": "Passwort vergessen?",
     "password": "Passwort",
     "password-description": "Gib hier das Passwort mit dem du dich registrieren möchtest ein.",
